// Copyright (C) 2021 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "storj.io/picobuf/internal/protocompat";

package types;

import "pico.proto";

enum Language {
  UNKNOWN = 0;
  ENGLISH = 1;
  SPANISH = 3;
  FRENCH = 4;
  GERMAN = 5;
}

message Types {
  int32    int32 = 1;
  int64    int64 = 2;
  uint32   uint32 = 3;
  uint64   uint64 = 4;
  sint32   sint32 = 5;
  sint64   sint64 = 6;
  fixed32  fixed32 = 7;
  fixed64  fixed64 = 8;
  sfixed32 sfixed32 = 9;
  sfixed64 sfixed64 = 10;
  float    float = 11;
  double   double = 12;
  bool     bool = 13;
  string   string = 14;
  bytes    bytes = 15;

  Message message = 16 [(pico.field).always_present = true];
  OptionalMessage optional_message = 17;

  Language language = 18;
}

message RepeatedTypes {
  repeated int32    int32 = 1;
  repeated int64    int64 = 2;
  repeated uint32   uint32 = 3;
  repeated uint64   uint64 = 4;
  repeated sint32   sint32 = 5;
  repeated sint64   sint64 = 6;
  repeated fixed32  fixed32 = 7;
  repeated fixed64  fixed64 = 8;
  repeated sfixed32 sfixed32 = 9;
  repeated sfixed64 sfixed64 = 10;
  repeated float    float = 11;
  repeated double   double = 12;
  repeated bool     bool = 13;
  repeated string   string = 14;
  repeated bytes    bytes = 15;
  repeated Message  message = 16;
  repeated Language language = 17;
}

message RepeatedMixed {
  int32    int32 = 1;
  repeated Message  message = 16;
}

message Message {
  int32 int32 = 1;
  int64 int64 = 2;
}

message Person {
  string   name = 1;
  int64    birthday = 2;
  string   phone = 3;
  int32    siblings = 4;
  bool     spouse = 5;
  double   money = 6;
  Language primary = 7;
  repeated Language spoken = 8;
}

message Map {
  map<string, string> values = 1;
}

message OptionalMessage {
  int32 int32 = 1;
}

message CommandMessage {
  string class = 1;
  oneof command {
    string name = 2;
    Message message = 3;
  }
}

/*
Go generator currently does not support explicit optional types.

message OptionalTypes {
	optional int32    int32    =  1;
	optional int64    int64    =  2;
	optional uint32   uint32   =  3;
	optional uint64   uint64   =  4;
	optional sint32   sint32   =  5;
	optional sint64   sint64   =  6;
	optional fixed32  fixed32  =  7;
	optional fixed64  fixed64  =  8;
	optional sfixed32 sfixed32 =  9;
	optional sfixed64 sfixed64 = 10;
	optional float    float    = 11;
	optional double   double   = 12;
	optional bool     bool     = 13;
	optional string   string   = 14;
	optional bytes    bytes    = 15;

	optional Message message = 16;
	optional OptionalMessage optional_message = 17;
}

message OptionalMessage {
	optional int32 optional_int32 = 1;
}
*/
